rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x509_2000_AttributeCertificateDefinitions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x509_2000_AttributeCertificateDefinitions.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 344, column 2]
     │
     │ 
 344 │  acceptableCertPolicies EXTENSION ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 345 │    SYNTAX          SIZE (1..MAX) OF CertPolicyId
     │
─────╯
