rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x509_2000_AuthenticationFramework.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x509_2000_AuthenticationFramework.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 181, column 2]
     │
     │ 
 181 │  SIGNED{ToBeSigned} ::= SEQUENCE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 182 │    toBeSigned  ToBeSigned,
 183 │    COMPONENTS OF SIGNATURE{ToBeSigned}
 184 │  }
 186 │  -- PKI object classes
     │
─────╯
