rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x509_2005_AlgorithmObjectIdentifiers.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x509_2005_AlgorithmObjectIdentifiers.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod algorithm_object_identifiers {
    extern crate alloc;
    use super::authentication_framework::*;
    use super::useful_definitions::{ALGORITHM, AUTHENTICATION_FRAMEWORK};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct KeySize(pub Integer);
    #[doc = " categories of object identifier"]
    pub static ENCRYPTION_ALGORITHM: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ALGORITHM, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static HASH_ALGORITHM: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ALGORITHM, &[2u32]].concat())
            .unwrap()
            .to_owned()
    });
    #[doc = " synonyms"]
    pub static ID_EA: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ALGORITHM, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    #[doc = " the following object identifier assignments reserve values assigned to deprecated functions"]
    pub static ID_EA_RSA: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_EA, &[1u32]].concat()).unwrap().to_owned());
    pub static ID_HA: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ALGORITHM, &[2u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_HA_SQ_MOD_N: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_HA, &[1u32]].concat()).unwrap().to_owned());
    pub static ID_SA: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ALGORITHM, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_SA_SQ_MOD_N_WITH_RSA: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_SA, &[1u32]].concat()).unwrap().to_owned());
    pub static SIGNATURE_ALGORITHM: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ALGORITHM, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
}
