rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x509_2005_AuthenticationFramework.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x509_2005_AuthenticationFramework.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 177, column 2]
     │
     │ 
 177 │  SIGNED{ToBeSigned} ::= SEQUENCE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 178 │    toBeSigned  ToBeSigned,
 179 │    COMPONENTS OF SIGNATURE{ToBeSigned}
 180 │  }
 182 │  -- PKI object classes
     │
─────╯
