rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x509_2005_CertificateExtensions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x509_2005_CertificateExtensions.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 366, column 2]
     │
     │ 
 366 │  IssuingDiutionPointName" target="files">DistributionPointName OPTIONAL, ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 367 │    onlyContainsUserPublicKeyCerts  [1]  BOOLEAN DEFAULT FALSE,
 368 │    onlyContainsCACerts             [2]  BOOLEAN DEFAULT FALSE,
 369 │    onlySomeReasons                 [3]  ReasonFlags OPTIONAL,
 370 │    indirectCRL                     [4]  BOOLEAN DEFAULT FALSE
 371 │  }
     │
─────╯
