rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x509_2008_AttributeCertificateDefinitions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x509_2008_AttributeCertificateDefinitions.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 336, column 2]
     │
     │ 
 336 │  AllowedAttributeAssignments ::= ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 337 │    teType           [0]  AttributeType,
 338 │                                 attributeTypeandValues
 339 │                                   [1]  Attribute{{SupportedAttributes}}
 340 │                         },
 341 │                holderDomain  [1]  GeneralName}
     │
─────╯
