rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x509_2008_AuthenticationFramework.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x509_2008_AuthenticationFramework.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 63, column 2]
    │
    │ 
 63 │  SIGNED{ToBeSigned} ::= SEQUENCE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 64 │    toBeSigned  ToBeSigned,
 65 │    COMPONENTS OF SIGNATURE{ToBeSigned}
 66 │  }
 68 │  -- public-key certificate definition
    │
────╯
