rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x509_2008_CertificateExtensions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x509_2008_CertificateExtensions.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 370, column 2]
     │
     │ 
 370 │  CertificateGroup ::= CHOICE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 371 │    serialNumbers      [0]
 372 │  }
     │
─────╯
